--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,8 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
+        <activity android:name=".profile.ProfileActivity">
+        </activity>
         <activity android:name=".circle.CircleActivity">
         </activity>
         <activity android:name=".register.RegisterActivity">
@@ -27,7 +29,6 @@
             <intent-filter>
                 <action android:name="android.intent.action.VIEW"/>
             </intent-filter>
-
         </activity>
     </application>
 
