implement onclicklistener in search friend activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,8 @@
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
     <dist:module dist:instant="true"/>
 
@@ -25,6 +25,8 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
+        <activity android:name=".circle.circlelist.newfriend.NewFriendActivity" android:theme="@style/Theme.Transparent">
+        </activity>
         <activity android:name=".login.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -62,12 +64,11 @@
         </activity>
         <activity android:name=".circle.CircleActivity">
         </activity>
-        <activity android:name=".register.RegisterActivity"
-                  android:windowSoftInputMode="adjustResize">
-
+        <activity
+                android:name=".register.RegisterActivity"
+                android:windowSoftInputMode="adjustResize">
         </activity>
         <activity android:name=".home.HomeActivity">
-
         </activity>
         <activity android:name=".MainActivity">
             <intent-filter>
